--- a/Factory/Views/Home/Index.cshtml
+++ b/Factory/Views/Home/Index.cshtml
@@ -2,6 +2,6 @@
   Layout = "_Layout";
 }
 
-<h1>Welcome to the To Do List!</h1>
+<h1>Dr. Sillystringz's Repair Tracker</h1>
 <button>@Html.ActionLink("See all machines", "Index", "Machines")</button>
 <button>@Html.ActionLink("See all engineers", "Index", "Engineers")</button>
