--- a/Factory/Views/Machines/Create.cshtml
+++ b/Factory/Views/Machines/Create.cshtml
@@ -7,7 +7,7 @@
 
 @using (Html.BeginForm())
 {
-  @Html.LabelFor(model => model.Name)
+  @Html.Label("Make/Model")
   @Html.TextBoxFor(model => model.Name)
 
   @Html.Label("Select engineer")
