--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -5,7 +5,7 @@
 
 <h1>Machine Details:</h1>
 <hr/>
-<h2>Name/Brand: @Html.DisplayFor(model => model.Name)</h2>
+<h2>Make/Model: @Html.DisplayFor(model => model.Name)</h2>
 <h3>Installation Date: @Html.DisplayFor(model => model.InstallationDate)</h2>
 
 @if (@Model.JoinEntities.Count == 0)
