streamline order for links

--- a/Factory/Views/Machines/Create.cshtml
+++ b/Factory/Views/Machines/Create.cshtml
@@ -18,3 +18,4 @@
 
 <button>@Html.ActionLink("Home", "Index", "Home")</button>
 <button>@Html.ActionLink("All machines", "Index")</button>
+<button>@Html.ActionLink("All engineers", "Index", "Engineers")</button>
