--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -29,3 +29,4 @@ else
 <hr/>
 <button>@Html.ActionLink("Home", "Index", "Home")</button>
 <button>@Html.ActionLink("All machines", "Index")</button>
+<button>@Html.ActionLink("All engineers", "Index", "Engineers")</button>
