--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -15,7 +15,7 @@
 <ul>
 @foreach (Machine machine in Model)
 {
-  <li>@Html.ActionLink($"{machine.Name}", "Detail", new { id = machine.MachineId })</li>
+  <li>@Html.ActionLink($"{machine.Name}", "Details", new { id = machine.MachineId })</li>
 }
 </ul>
 
