add HiddenFor to pass DateTime object

--- a/Factory/Views/Machines/Edit.cshtml
+++ b/Factory/Views/Machines/Edit.cshtml
@@ -9,6 +9,7 @@
 @using (Html.BeginForm())
 {
   @Html.HiddenFor(model => model.MachineId)
+  @Html.HiddenFor(model => model.InstallationDate)
   @Html.Label("Make/Model")
   @Html.EditorFor(model => model.Name)
   @Html.Label("Select engineer")
