add HiddenFor HireDate

--- a/Factory/Views/Engineers/Edit.cshtml
+++ b/Factory/Views/Engineers/Edit.cshtml
@@ -9,6 +9,7 @@
 @using (Html.BeginForm())
 {
   @Html.HiddenFor(model => model.EngineerId)
+  @Html.HiddenFor(model => model.HireDate)
   @Html.LabelFor(model => model.Name)
   @Html.EditorFor(model => model.Name)
   @Html.Label("Select machine")
