--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -7,6 +7,13 @@
 
 <h1>Machines</h1>
 
+@using (Html.BeginForm())
+{
+<p>
+    Find by name: @Html.TextBox("SearchString")  
+    <input type="submit" value="Search" /></p>
+}
+
 @if (@Model.Count == 0)
 {
   <p>No machines have been added to the system</p>
