--- a/Factory/Views/Engineers/Index.cshtml
+++ b/Factory/Views/Engineers/Index.cshtml
@@ -7,6 +7,13 @@
 
 <h1>Engineers</h1>
 
+@using (Html.BeginForm())
+{
+  @Html.Label("Search by name:")
+  @Html.TextBox("SearchString")  
+  <input type="submit" value="Search" />
+}
+
 @if (@Model.Count == 0)
 {
   <p>No engineers have been added to the system</p>
