--- a/Factory/Views/Engineers/Create.cshtml
+++ b/Factory/Views/Engineers/Create.cshtml
@@ -8,10 +8,9 @@
 @using (Html.BeginForm())
 {
   @Html.LabelFor(model => model.Name)
-  @Html.TextBoxFor(model => model.Name)
-
+  @Html.TextBoxFor(model => model.Name, new { required="required" })
   @Html.Label("Select machine")
-  @Html.DropDownList("MachineId")
+  @Html.DropDownList("MachineId", (SelectList)ViewBag.MachineId, "None")
 
   <input type="submit" value="Add new machine" />
 }
