--- a/Factory/Views/Engineers/Index.cshtml
+++ b/Factory/Views/Engineers/Index.cshtml
@@ -1,5 +1,5 @@
 @{
-  Layout = "_Layout";
+  Layout = "_EngineerLayout";
 }
 
 @using Factory.Models
@@ -27,7 +27,3 @@
 </ul>
 
 <button>@Html.ActionLink("New engineer", "Create")</button>
-<hr/>
-<button>@Html.ActionLink("Home", "Index", "Home")</button>
-<button>@Html.ActionLink("All engineers", "Index")</button>
-<button>@Html.ActionLink("All machines", "Index", "Machines")</button>
