--- a/Factory/Views/Engineers/Create.cshtml
+++ b/Factory/Views/Engineers/Create.cshtml
@@ -1,5 +1,5 @@
 @{
-  Layout = "_Layout";
+  Layout = "_EngineerLayout";
 }
 @model Factory.Models.Engineer
 
@@ -14,7 +14,3 @@
 
   <input type="submit" value="Add new machine" />
 }
-
-<button>@Html.ActionLink("Home", "Index", "Home")</button>
-<button>@Html.ActionLink("All engineers", "Index")</button>
-<button>@Html.ActionLink("All machines", "Index", "Machines")</button>
