--- a/Factory/Views/Machines/Delete.cshtml
+++ b/Factory/Views/Machines/Delete.cshtml
@@ -1,5 +1,5 @@
 @{
-  Layout = "_Layout";
+  Layout = "_MachineLayout";
 }
 @model Factory.Models.Machine
 
@@ -11,7 +11,3 @@
 {
   <input type="submit" value="Delete"/>
 }
-
-<button>@Html.ActionLink("Home", "Index", "Home")</button>
-<button>@Html.ActionLink("All machines", "Index")</button>
-<button>@Html.ActionLink("All engineers", "Index", "Engineers")</button>
