--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -1,5 +1,5 @@
 @{
-  Layout = "_Layout";
+  Layout = "_MachineLayout";
 }
 @model Factory.Models.Machine
 
@@ -31,7 +31,3 @@ else
 <button>@Html.ActionLink("Assign an engineer", "AddEngineer", new { id = Model.MachineId })</button>
 <button>@Html.ActionLink("Edit machine", "Edit", new { id = Model.MachineId })</button>
 <button>@Html.ActionLink("Delete machine", "Delete", new { id = Model.MachineId })</button>
-<hr/>
-<button>@Html.ActionLink("Home", "Index", "Home")</button>
-<button>@Html.ActionLink("All machines", "Index")</button>
-<button>@Html.ActionLink("All engineers", "Index", "Engineers")</button>
