--- a/Factory/Views/Machines/Edit.cshtml
+++ b/Factory/Views/Machines/Edit.cshtml
@@ -1,5 +1,5 @@
 @{
-  Layout = "_Layout";
+  Layout = "_MachineLayout";
 }
 @model Factory.Models.Machine
 
@@ -16,7 +16,3 @@
   @Html.DropDownList("EngineerId", (SelectList)ViewBag.EngineerId, "None")
   <input type="submit" value="Save"/>
 }
-
-<button>@Html.ActionLink("Home", "Index", "Home")</button>
-<button>@Html.ActionLink("All machines", "Index")</button>
-<button>@Html.ActionLink("All engineers", "Index", "Engineers")</button>
